[package]
name = "rquickjs-extra"
description = "Extra modules for RQuickJS"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/rquickjs/rquickjs-extra"
readme = "README.md"

[features]
default = ["all"]
all = ["timers", "url", "console", "sqlite"]

timers = ["rquickjs-extra-timers"]
url = ["rquickjs-extra-url"]
console = ["rquickjs-extra-console"]
sqlite = ["rquickjs-extra-sqlite"]

[dependencies]
rquickjs-extra-console = { path = "modules/console", optional = true }
rquickjs-extra-sqlite = { path = "modules/sqlite", optional = true }
rquickjs-extra-timers = { path = "modules/timers", optional = true }
rquickjs-extra-url = { path = "modules/url", optional = true }

[workspace]
resolver = "2"
members = ["modules/*", "libs/*"]

[workspace.dependencies]
either = "1"
futures = { version = "0.3" }
log = { version = "0.4" }
rquickjs = { version = "0.6", features = [
  "array-buffer",
  "either",
  "macro",
  "futures",
] }
sqlx = { version = "0.8.2", default-features = false, features = [
  "sqlite",
  "runtime-tokio",
] }
tokio = { version = "1" }
