[package]
name = "rquickjs-extra"
description = "Extra modules for RQuickJS"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/rquickjs/rquickjs-extra"
readme = "README.md"
authors = ["Emile Fugulin <code@efugulin.com>"]

[features]
default = ["all"]
all = ["timers", "url", "console", "sqlite", "os"]

timers = ["rquickjs-extra-timers"]
os = ["rquickjs-extra-os"]
url = ["rquickjs-extra-url"]
console = ["rquickjs-extra-console"]
sqlite = ["rquickjs-extra-sqlite"]

[dependencies]
rquickjs-extra-console = { path = "modules/console", optional = true }
rquickjs-extra-os = { path = "modules/os", optional = true }
rquickjs-extra-sqlite = { path = "modules/sqlite", optional = true }
rquickjs-extra-timers = { path = "modules/timers", optional = true }
rquickjs-extra-url = { path = "modules/url", optional = true }

[workspace]
resolver = "2"
members = ["modules/*", "libs/*"]
