[package]
name = "rquickjs-extra-test"
description = "Test library for RQuickJS"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/rquickjs/rquickjs-extra"
readme = "README.md"

[dependencies]
futures = { version = "0.3" }
rquickjs = { version = "0.9", features = ["macro", "futures"] }
tokio = { version = "1", features = ["full"] }
