[package]
name = "rquickjs-extra-test"
description = "Test library for RQuickJS"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/rquickjs/rquickjs-extra"
authors = ["Emile Fugulin <code@efugulin.com>"]

[dependencies]
futures = { version = "0.3" }
rquickjs = { version = "0.9", features = ["macro", "futures"] }
tokio = { version = "1", features = ["full"] }
