[package]
name = "rquickjs-extra-utils"
description = "Utils library for RQuickJS"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/rquickjs/rquickjs-extra"
readme = "README.md"
authors = ["Emile Fugulin <code@efugulin.com>"]

[dependencies]
rquickjs = { version = "0.9", features = ["array-buffer"] }
