[package]
name = "rquickjs-extra-utils"
description = "Utils library for RQuickJS"
version = "0.1.2"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/rquickjs/rquickjs-extra"
authors = ["Emile Fugulin <code@efugulin.com>"]

[dependencies]
rquickjs = { version = "0.10.0", features = ["array-buffer"] }
