[package]
name = "rquickjs-extra-utils"
description = "Utils library for RQuickJS"
version = "0.2.1"
edition = "2024"
rust-version = "1.88.0"
license = "Apache-2.0"
repository = "https://github.com/rquickjs/rquickjs-extra"
authors = ["Emile Fugulin <code@efugulin.com>"]

[dependencies]
rquickjs = { version = ">=0.10,<0.12", features = ["array-buffer"] }
