[package]
name = "rquickjs-extra-os"
description = "OS module for RQuickJS"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/rquickjs/rquickjs-extra"
readme = "README.md"

[dependencies]
home = "0.5"
num_cpus = "1"
once_cell = "1"
rquickjs = { version = "0.9", features = ["macro"] }
rquickjs-extra-utils = { version = "0.1.0", path = "../../libs/utils" }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-registry = "0.5"
windows-result = "0.3"
windows-version = "0.1"

[dev-dependencies]
rquickjs = { version = "0.9", features = ["futures"] }
rquickjs-extra-test = { version = "0.1.0", path = "../../libs/test" }
tokio = { version = "1", features = ["full"] }
