[package]
name = "rquickjs-extra-sqlite"
description = "SQLite module for RQuickJS"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/rquickjs/rquickjs-extra"
readme = "README.md"

[dependencies]
either = { version = "1" }
rquickjs = { version = "0.6", features = [
  "array-buffer",
  "either",
  "macro",
  "futures",
] }
rquickjs-extra-utils = { path = "../../libs/utils" }
sqlx = { version = "0.8.2", default-features = false, features = [
  "sqlite",
  "runtime-tokio",
] }

[dev-dependencies]
rquickjs-extra-test = { path = "../../libs/test" }
tokio = { version = "1", features = ["full"] }
