[package]
name = "rquickjs-extra-sqlite"
description = "SQLite module for RQuickJS"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/rquickjs/rquickjs-extra"
authors = ["Emile Fugulin <code@efugulin.com>"]

[dependencies]
either = { version = "1" }
rquickjs = { version = "0.9", features = [
  "array-buffer",
  "either",
  "macro",
  "futures",
] }
rquickjs-extra-utils = { version = "0.1.0", path = "../../libs/utils" }
sqlx = { version = "0.8", default-features = false, features = [
  "sqlite",
  "runtime-tokio",
] }

[dev-dependencies]
rquickjs-extra-test = { version = "0.1.0", path = "../../libs/test" }
tokio = { version = "1", features = ["full"] }
