[package]
name = "rquickjs-extra-timers"
description = "Timers module for RQuickJS"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/rquickjs/rquickjs-extra"
authors = ["Emile Fugulin <code@efugulin.com>"]

[dependencies]
log = { version = "0.4" }
rquickjs = { version = "0.9", features = ["macro", "futures"] }
tokio = { version = "1", features = ["sync", "time", "macros"] }

[dev-dependencies]
futures = { version = "0.3" }
rquickjs-extra-test = { path = "../../libs/test" }
tokio = { version = "1", features = ["full"] }
