[package]
name = "rquickjs-extra-url"
description = "URL module for RQuickJS"
version = "0.2.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/rquickjs/rquickjs-extra"
authors = ["Emile Fugulin <code@efugulin.com>"]

[dependencies]
either = { version = "1" }
rquickjs = { version = "0.10", features = ["either", "macro"] }

[dev-dependencies]
rquickjs-extra-test = { path = "../../libs/test" }
