[package]
name = "rquickjs-extra-url"
description = "URL module for RQuickJS"
version = "0.2.1"
edition = "2024"
rust-version = "1.88.0"
license = "Apache-2.0"
repository = "https://github.com/rquickjs/rquickjs-extra"
authors = ["Emile Fugulin <code@efugulin.com>"]

[dependencies]
either = { version = "1" }
rquickjs = { version = ">=0.10,<0.12", features = ["either", "macro"] }

[dev-dependencies]
rquickjs-extra-test = { path = "../../libs/test" }
